rplace/templates/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-rplace
  namespace: rplace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: place.inpt.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rplace-frontend
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: rplace-backend
            port:
              number: 8080
  tls:
  - hosts:
      - place.inpt.fr
    secretName: rplace-tls
